--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "description": "web-sockets-experiment",
   "main": "main.js",
   "dependencies": {
+    "@babel/core": "^7.0.0-rc.3",
+    "@babel/preset-env": "^7.0.0-rc.3",
+    "babel-loader": "^8.0.0-beta.6",
     "express": "^4.16.3",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
-    "webpack": "^4.16.5"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
+    "webpack": "^4.17.1"
   },
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joshua Jackson",
