--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
-    "webpack": "^4.17.1"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Joshua Jackson",
